added missing templates

--- a/backend/rest/templates/medikamentenanfrage_offen.html
+++ b/backend/rest/templates/medikamentenanfrage_offen.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+
 <div class="mdc-data-table">
     <div class="mdc-data-table__table-container">
         <table class="mdc-data-table__table" aria-label="Dessert calories">
@@ -109,3 +114,4 @@
     </div>
 </div>
 
+{% endblock content %}
