--- a/backend/rest/templates/patientenliste_arzt.html
+++ b/backend/rest/templates/patientenliste_arzt.html
@@ -1,10 +1,7 @@
-{% extends 'base_arzt.html' %}
+
 {% load static %}
 
 {% block content %}
-
-<link rel="stylesheet" href="{% static 'styles.css' %}">
-
 <table class="table table-striped">
     <thead>
     <tr>
@@ -18,7 +15,7 @@
     <tbody>
     <tr>
         <th scope="row">1</th>
-        <td>Mark</td>
+        <td>Mark223</td>
         <td>Otto</td>
         <td>Ibuprohen</td>
         <td>100mg</td>
@@ -39,6 +36,5 @@
     </tr>
     </tbody>
 </table>
+
 {% endblock content %}
-
-
