--- a/backend/rest/templates/medikamentenplan.html
+++ b/backend/rest/templates/medikamentenplan.html
@@ -37,5 +37,9 @@
     </tr>
     </tbody>
 </table>
+
+
+<p>{{medikamentenplan.id}}</p>
+<p>{{medikamentenplan.patient}}</p>
 {% endblock content %}
 
