--- a/backend/rest/templates/Login.html
+++ b/backend/rest/templates/Login.html
@@ -2,10 +2,12 @@
 {% load static %}
 
 {% block content %}
-<div class="container center_div">
-<form action="/krankenkasseLogin/" method="post">
+
+<div class="container-fluid center_div col-md-4 col-md-offset-3">
+
+    <form action="/krankenkasseLogin/" method="post">
     {% csrf_token %}
-    <div class="form-group form-group w-25 center">
+    <div class="form-group form-group w-50 center">
         <label for="exampleFormControlSelect1" class="col-form-label">Ich bin...</label>
         <select class="form-control" id="exampleFormControlSelect1">
             <option>Arzt</option>
@@ -13,7 +15,7 @@
             <option>Apotheke</option>
         </select>
     </div>
-    <div class="form-group form-group w-25">
+    <div class="form-group form-group w-50">
         <label for="exampleFormControlSelect2">Example multiple select</label>
         <select multiple class="form-control" id="exampleFormControlSelect2">
             <option>1</option>
@@ -25,4 +27,5 @@
         <input type="submit" class="btn btn-lg btn-primary" value="Anmelden">
 </form>
 </div>
+
 {% endblock content %}
