--- a/backend/rest/templates/medikamentBestellen.html
+++ b/backend/rest/templates/medikamentBestellen.html
@@ -1,30 +1,29 @@
-
+{% extends 'ueberblick_patient.html' %}
 {% load static %}
+
 <link rel="stylesheet" href="{% static 'styles.css' %}">
 
 {% block content %}
 <form action="/medikamentenbestellung/" method="POST">
 {% csrf_token %}
-<div>
-    <label class="mdc-text-field mdc-text-field--filled">
-        <span class="mdc-text-field__ripple"></span>
-        <span class="mdc-floating-label" >Medikamentenname</span>
-        <input class="mdc-text-field__input" type="text" id="medikamentenbestellung"  aria-labelledby="my-label-id">
-        <span class="mdc-line-ripple"></span>
-    </label>
-</div>
-<div>
-    <label class="mdc-text-field mdc-text-field--filled">
-        <span class="mdc-text-field__ripple"></span>
-        <span class="mdc-floating-label" >Menge</span>
-        <input class="mdc-text-field__input"  type="text"  id="menge" aria-labelledby="my-label-id">
-        <span class="mdc-line-ripple"></span>
-    </label>
-</div>
-<div>
-    <button class="mdc-button "><span class="mdc-button__ripple" ></span>
-        <span class="mdc-button__label_form" formaction="{% url 'medikament bestellen' %}">Bestellen</span></button>
-</div>
+    <div class="container-fluid">
+        <form action="#" method="POST" style="..."
+              {% csrf_token %}
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Medikamentenname</label>
+            <div class="col-sm-10">
+                <input type="text" id="medikamentenname">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Menge</label>
+            <div class="col-sm-10">
+                <input type="text" id="menge">
+            </div>
+        </div>
+        <input type="submit" class="btn btn-lg btn-primary" value="Bestellen">
+    </div>
 </form>
 {% endblock content %}
+
 
