added view logic

--- a/backend/rest/templates/medikamentenplan.html
+++ b/backend/rest/templates/medikamentenplan.html
@@ -7,39 +7,26 @@
     <thead>
     <tr>
         <th scope="col">Nr.</th>
-        <th scope="col">Vorname</th>
-        <th scope="col">Nachname</th>
-        <th scope="col">Medikamenten</th>
+        <th scope="col">Medikament</th>
+        <th scope="col">Wochentag</th>
+        <th scope="col">Uhrzeit</th>
         <th scope="col">Menge</th>
     </tr>
     </thead>
     <tbody>
-    <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>Ibuprohen</td>
-        <td>100mg</td>
-    </tr>
-    <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>Marcomar</td>
-        <td>1 Packung</td>
-    </tr>
-    <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>Aspirin</td>
-        <td>2 Packungen</td>
-    </tr>
+        {% for i in medikamentenplan %}
+        <tr>
+            <td></td>
+            <td>{{i.medikament.medikamentenname}}</td>
+            <td>{{i.wochentag}}</td>
+            <td>{{i.uhrzeit}}</td>
+            <td>{{i.menge}}</td>
+        </tr>
+        {% endfor %}
     </tbody>
 </table>
 
 
-<p>{{medikamentenplan.id}}</p>
-<p>{{medikamentenplan.patient}}</p>
+
 {% endblock content %}
 
