--- a/backend/rest/templates/patientenliste_arzt.html
+++ b/backend/rest/templates/patientenliste_arzt.html
@@ -2,39 +2,6 @@
 {% load static %}
 
 {% block content %}
-<table class="table table-striped">
-    <thead>
-    <tr>
-        <th scope="col">Nr.</th>
-        <th scope="col">Vorname</th>
-        <th scope="col">Nachname</th>
-        <th scope="col">Medikamenten</th>
-        <th scope="col">Menge</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <th scope="row">1</th>
-        <td>Mark223</td>
-        <td>Otto</td>
-        <td>Ibuprohen</td>
-        <td>100mg</td>
-    </tr>
-    <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>Marcomar</td>
-        <td>1 Packung</td>
-    </tr>
-    <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>Aspirin</td>
-        <td>2 Packungen</td>
-    </tr>
-    </tbody>
-</table>
+<h2>ddd</h2>
 
 {% endblock content %}
