--- a/backend/rest/templates/persoenlicheDaten_arzt.html
+++ b/backend/rest/templates/persoenlicheDaten_arzt.html
@@ -1,40 +1,41 @@
 
 {% load static %}
-
+<link rel="stylesheet" href="{% static 'styles.css' %}">
 {% block content %}
-<table class="table table-striped">
-    <thead>
-    <tr>
-        <th scope="col">Nr.</th>
-        <th scope="col">Vorname</th>
-        <th scope="col">Nachname</th>
-        <th scope="col">Medikamenten</th>
-        <th scope="col">Menge</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <th scope="row">1</th>
-        <td>Mark2</td>
-        <td>Otto</td>
-        <td>Ibuprohen</td>
-        <td>100mg</td>
-    </tr>
-    <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>Marcomar</td>
-        <td>1 Packung</td>
-    </tr>
-    <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>Aspirin</td>
-        <td>2 Packungen</td>
-    </tr>
-    </tbody>
-</table>
-
-{% endblock content %}
+<div class="container-sm col-sm-8 row justify-content-center">
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">Attribut</th>
+            <th scope="col">Wert</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Vorname</td>
+            <td>{{arzt.vorname}}</td>
+        </tr>
+        <tr>
+            <td>Name</td>
+            <td>{{arzt.nachname}}</td>
+        </tr>
+        <tr>
+            <td>Strasse</td>
+            <td>{{arzt.strasse}}</td>
+        </tr>
+        <tr>
+            <td>Nr.</td>
+            <td>{{arzt.nr}}</td>
+        </tr>
+        <tr>
+            <td>PLZ</td>
+            <td>{{arzt.plz}}</td>
+        </tr>
+        <tr>
+            <td>Wohnort</td>
+            <td>{{arzt.ort}}</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+    {% endblock content %}
