--- a/backend/rest/templates/base_arzt.html
+++ b/backend/rest/templates/base_arzt.html
@@ -28,7 +28,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Überblick <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/arzt_ueberblick/">Überblick <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Regeln</a>
