--- a/backend/rest/templates/medikamentBestellen.html
+++ b/backend/rest/templates/medikamentBestellen.html
@@ -1,29 +1,30 @@
-{% extends 'ueberblick_patient.html' %}
+{% extends 'base_patient.html' %}
 {% load static %}
 
 <link rel="stylesheet" href="{% static 'styles.css' %}">
 
 {% block content %}
+
+<div class="col-xs-12" style="height:50px;"></div>
 <form action="/medikamentenbestellung/" method="POST">
 {% csrf_token %}
     <div class="container-fluid">
-        <form action="#" method="POST" style="..."
-              {% csrf_token %}
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Medikamentenname</label>
-            <div class="col-sm-10">
-                <input type="text" id="medikamentenname">
-            </div>
+        <form action="#" method="POST" style="...">
+            {% csrf_token %}
+        <div class="mb-3 col-sm-4">
+            <label for="medikamentenname" class="form-label">Medikamentenname</label>
+                <input type="text" id="medikamentenname" class="form-control">
         </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Menge</label>
-            <div class="col-sm-10">
-                <input type="text" id="menge">
-            </div>
+        <div class="mb-3 col-sm-4">
+            <label for="menge">Menge</label>
+                <input type="text" id="menge" class="form-control">
         </div>
-        <input type="submit" class="btn btn-lg btn-primary" value="Bestellen">
+            <div class="mb-3 col-sm-4">
+        <input type="submit" class="btn btn-lg btn-primary" value="Bestellen" />
+            </div>
     </div>
 </form>
+
 {% endblock content %}
 
 
