--- a/backend/rest/templates/ueberblick_patient.html
+++ b/backend/rest/templates/ueberblick_patient.html
@@ -9,15 +9,18 @@
         <a class="nav-item nav-link" id="nav-med-plan-tab" data-toggle="tab" href="#nav-med-plan" role="tab" aria-controls="nav-med-plan" aria-selected="false">Medikamentenplan</a>
         <a class="nav-item nav-link" id="nav-bestand-tab" data-toggle="tab" href="#nav-bestand" role="tab" aria-controls="nav-bestand" aria-selected="true">Bestand</a>
         <a class="nav-item nav-link" id="nav-bestellungen-tab" data-toggle="tab" href="#nav-bestellungen" role="tab" aria-controls="nav-bestellungen" aria-selected="true">Bestellungen</a>
-        <a class="nav-item nav-link" id="nav-akte-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Patientenakte</a>
+        <a class="nav-item nav-link" id="nav-patientenakte-tab" data-toggle="tab" href="#nav-patientenakte" role="tab" aria-controls="nav-patientenakte" aria-selected="false">Patientenakte</a>
     </div>
 </nav>
 <div class="tab-content" id="nav-tabContent">
     <div class="tab-pane fade show active" id="nav-per-Daten" role="tabpanel" aria-labelledby="nav-per-Daten-tab">{% include 'persoenlicheDaten_patient.html' with objects=patient %}</div>
     <div class="tab-pane fade" id="nav-med-plan" role="tabpanel" aria-labelledby="nav-med-plan-tab">{% include 'medikamentenplan.html' with objects=medikamentenplan %}</div>
     <div class="tab-pane fade" id="nav-bestand" role="tabpanel" aria-labelledby="nav-bestand-tab">tbd2</div>
-    <div class="tab-pane fade" id="nav-bestellungen" role="tabpanel" aria-labelledby="nav-bestellungen-tab">{% include 'medikamentBestellen.html' %}</div>
-    <div class="tab-pane fade" id="nav-patientenakte" role="tabpanel" aria-labelledby="nav-akte-tab">tbd3</div>
+    <div class="tab-pane fade" id="nav-bestellungen" role="tabpanel" aria-labelledby="nav-bestellungen-tab">{% include 'offene_bestellungen_patient.html' %}</div>
+    <div class="tab-pane fade" id="nav-patientenakte" role="tabpanel" aria-labelledby="nav-patientenakte-tab">tbd3</div>
 
 </div>
+
+
+
 {% endblock content %}
