--- a/backend/rest/templates/medikamentBestellen.html
+++ b/backend/rest/templates/medikamentBestellen.html
@@ -6,25 +6,49 @@
 {% block content %}
 
 <div class="col-xs-12" style="height:50px;"></div>
-<form action="/medikamentenbestellung/" method="POST">
-{% csrf_token %}
-    <div class="container-fluid">
-        <form action="#" method="POST" style="...">
-            {% csrf_token %}
-        <div class="mb-3 col-sm-4">
-            <label for="medikamentenname" class="form-label">Medikamentenname</label>
-                <input type="text" id="medikamentenname" class="form-control">
-        </div>
-        <div class="mb-3 col-sm-4">
-            <label for="menge">Menge</label>
-                <input type="text" id="menge" class="form-control">
-        </div>
-            <div class="mb-3 col-sm-4">
-        <input type="submit" class="btn btn-lg btn-primary" value="Bestellen" />
-            </div>
-    </div>
-</form>
 
+    <div class="container-fluid">
+        <form action="/medikamentenbestellung/" method="POST" style="...">
+            {% csrf_token %}
+            <div class="mb-3 col-sm-4">
+                <label for="medikamentenname" class="form-label">Medikamentenname</label>
+                    <input type="text" id="medikamentenname" class="form-control" name="medikamentenname">
+            </div>
+            <div class="mb-3 col-sm-4">
+                <label for="dosierung">Dosierung</label>
+                    <input type="text" id="dosierung" class="form-control" name="dosierung">
+            </div>
+            <div class="mb-3 col-sm-4">
+                <label for="menge">Menge</label>
+                    <input type="text" id="menge" class="form-control" name="menge">
+            </div>
+
+            <div class="mb-3 col-sm-4 " id="auswahl" name="auswahl">
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked="checked">
+                    <label class="form-check-label" for="flexRadioDefault2">
+                        Abholung
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                    <label class="form-check-label" for="flexRadioDefault1">
+                        Lieferung
+                    </label>
+                </div>
+            </div>
+            <input type="hidden" class ="Bestellmodalitaet"  id="Bestellmodalitaet" name="Bestellmodalitaet" value="bn">
+            <div class="mb-3 col-sm-4">
+                <input type="submit" class="btn btn-lg btn-primary" value="Bestellen">
+            </div>
+        </form>
+    </div>
+
+
+<script>
+    var Bestellmodalitaet = document.querySelector('input[type="radio"][name="flexRadioDefault"]:checked').val();
+    $("#Bestellmodalitaet").attr("value", "cv");
+</script>
 {% endblock content %}
 
 
