--- a/backend/rest/templates/medikamentenanfrage_offen.html
+++ b/backend/rest/templates/medikamentenanfrage_offen.html
@@ -11,6 +11,7 @@
         <th scope="col">Nr.</th>
         <th scope="col">Patient</th>
         <th scope="col">Medikamentenname</th>
+        <th scope="col">Dosis</th>
         <th scope="col">Menge</th>
     </tr>
     </thead>
@@ -20,6 +21,7 @@
         <td></td>
         <td>{{i.patient.nachname}}</td>
         <td>{{i.medikamentenname.medikamentenname}}</td>
+        <td>{{i.dosis}}</td>
         <td>{{i.menge}}</td>
     </tr>
     {% endfor %}
