Datenausgabe json Anfang

--- a/backend/rest/templates/persoenlicheDaten_arzt.html
+++ b/backend/rest/templates/persoenlicheDaten_arzt.html
@@ -37,5 +37,12 @@
         </tr>
         </tbody>
     </table>
+    <!--
+    <a href="serializejson" download="GFG">
+         <button type="button">Daten ausgeben</button>
+    </a>
+    das liefert direkt downloadfunktion, sieht aber hässlicher aus; muss mit funktion (json erstellen) verknüpft werden
+    -->
+    <input type="submit" class="btn btn-lg btn-primary" href="serializejson" value="Daten ausgeben">
 </div>
     {% endblock content %}
