--- a/backend/IAM/templates/Login.html
+++ b/backend/IAM/templates/Login.html
@@ -28,6 +28,7 @@
             </select>
 
         <input type="submit" class="btn btn-lg btn-primary" value="Anmelden">
+    </div>
 </form>
 </div>
 
