--- a/backend/rest/templates/persoenlicheDaten_patient.html
+++ b/backend/rest/templates/persoenlicheDaten_patient.html
@@ -41,4 +41,9 @@
 
 </div>
 
+<form action="/getUserData/{{patient.id}}/" method="POST">
+    {% csrf_token %}
+    <input type="submit" value="Daten exportieren">
+</form>
+
 {% endblock content %}
