--- a/backend/rest/templates/offene_bestellungen_apotheke.html
+++ b/backend/rest/templates/offene_bestellungen_apotheke.html
@@ -15,11 +15,11 @@
             <th scope="col">Dosierung</th>
             <th scope="col">Patient</th>
             <th scope="col">wirdAbgeholt</th>
+            <th scope="col">Liefertermin</th>
             <th scope="col">Auswahl</th>
         </tr>
         </thead>
         <tbody>
-        {% for i in bestellungen %}
         <tr>
             <td>{{ forloop.counter }}</td>
             <td>{{i.medikamentenname.medikamentenname}}</td>
@@ -27,18 +27,20 @@
             <td>{{i.dosierung}}</td>
             <td>{{i.patient.nachname}},{{i.patient.vorname}}</td>
             <td>{{i.wirdAbgeholt}}</td>
+            <td>{% if i.liefertermin %}{{i.liefertermin}}{% else %}--{% endif %}</td>
             <td>
+                {% if not i.status == 'Archiviert' %}
                 {% if i.wirdAbgeholt %}
                     <form action="/BestellungBestätigen/" method="POST">
                         {% csrf_token %}
                         <input type="hidden" value="{{i.id}}" name="id" id="id" />
-                        <input type="submit" value="Bestätigen" />
-                        <input type="submit" value="Ablehnen" />
+                        <input type="submit" class="btn btn-info" value="Bestätigen" />
+                        <input type="submit" class="btn btn-info" disabled value="Ablehnen" />
                     </form>
                 {% else %}
 
-                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Bestätigen</button>
-
+                <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Bestätigen</button>
+                <button type="button" class="btn btn-info" disabled value="Ablehnen" >Ablehnen</button>
                 <!-- Modal -->
                 <div id="myModal" class="modal fade" role="dialog">
                     <div class="modal-dialog">
@@ -46,26 +48,25 @@
                         <!-- Modal content-->
                         <div class="modal-content">
                             <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 <h4 class="modal-title">Liefertermin festlegen</h4>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
                             </div>
                             <div class="modal-body">
                                 <form action="/BestellungBestätigen/" method="POST" class = "modal-footer">
                                     {% csrf_token %}
-                                    <input type="text" id="termin" name="termin", placeholder="DD.MM.YYYY">
+                                    <input type="text" id="termin" name="termin" placeholder="DD.MM.YYYY" required="true">
                                     <input type="hidden" value="{{i.id}}" name="id" id="id" />
                                     <input type="submit" value="Bestätigen" />
                                 </form>
-
-                            </div>
-                            <div class="">
-                                <button type="button" src="/BestellungBestätigen/" class="btn btn-default" data-dismiss="modal">Bestätigen</button>
                             </div>
 
                         </div>
 
                     </div>
                 </div>
+                {% endif  %}
                 {% endif  %}
             </td>
         </tr>
@@ -75,6 +76,8 @@
         </tbody>
     </table>
 </div>
+
+
 
 
 {% endblock content %}
