--- a/backend/rest/templates/fehlende_Authentifizierung.html
+++ b/backend/rest/templates/fehlende_Authentifizierung.html
@@ -24,29 +24,8 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="/arzt_ueberblick/">Überblick <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Regeln</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/medikamentenanfrageOffen/">Anfragen</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="/logout">Logout</a>
-            </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </div>
 </nav>
-{% block content %}{% endblock content %}
+<h2>Authentifizierung notwendig!</h2>
 </body>
 
 </html>
