--- a/backend/IAM/templates/Krankenkasse_Login.html
+++ b/backend/IAM/templates/Krankenkasse_Login.html
@@ -26,6 +26,7 @@
                     </div>
                 </div>
             {% endif %}
+            <div class="col-xs-12" style="height:50px;"></div>
             <div class="mb-3 col-sm-4">
                 <input type="submit" class="btn btn-lg btn-primary" value="Anmelden">
             </div>
