--- a/backend/rest/templates/base_apotheke.html
+++ b/backend/rest/templates/base_apotheke.html
@@ -28,13 +28,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/arzt_ueberblick/">Überblick <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Regeln</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/medikamentenanfrageOffen/">Anfragen</a>
+                <a class="nav-link" href="/apotheke_ueberblick/">Überblick <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link disabled" href="/logout">Logout</a>
