--- a/backend/rest/templates/fehlende_Authentifizierung.html
+++ b/backend/rest/templates/fehlende_Authentifizierung.html
@@ -26,6 +26,7 @@
     </button>
 </nav>
 <h2>Authentifizierung notwendig!</h2>
+<input type="submit" class="btn btn-lg btn-primary" href="/login/" value="Login">
 </body>
 
 </html>
