--- a/backend/rest/templates/ueberblick_patient.html
+++ b/backend/rest/templates/ueberblick_patient.html
@@ -6,7 +6,7 @@
 <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
         <a class="nav-item nav-link active" id="nav-per-Daten-tab" data-toggle="tab" href="#nav-per-Daten" role="tab" aria-controls="nav-per-Daten" aria-selected="true">Persönliche Daten</a>
-        <a class="nav-item nav-link" id="nav-med-plan-tab" data-toggle="tab" href="#nav-med-plan" role="tab" aria-controls="nav-med-plan" aria-selected="false">Medikamentenplan</a>
+        <a class="nav-item nav-link" id="nav-med-plan-tab" data-toggle="tab" href="#nav-med-plan" role="tab" aria-controls="nav-med-plan" aria-selected="false">Medikationsplan</a>
         <a class="nav-item nav-link" id="nav-bestand-tab" data-toggle="tab" href="#nav-bestand" role="tab" aria-controls="nav-bestand" aria-selected="true">Bestand</a>
         <a class="nav-item nav-link" id="nav-bestellungen-tab" data-toggle="tab" href="#nav-bestellungen" role="tab" aria-controls="nav-bestellungen" aria-selected="true">Bestellungen</a>
         <a class="nav-item nav-link" id="nav-patientenakte-tab" data-toggle="tab" href="#nav-patientenakte" role="tab" aria-controls="nav-patientenakte" aria-selected="false">Patientenakte</a>
